# pcmsolver

./: .magnum.yml  .travis.yml  CMakeLists.txt  setup.py
cmake/: autocmake.cfg
cmake/custom/: libgetkw.cmake  pcmsolver.cmake  static_library.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/C_host/: CMakeLists.txt
tests/Fortran_host/: CMakeLists.txt
tests/bi_operators/: CMakeLists.txt
