set_property(GLOBAL PROPERTY UnitTestsSources)
add_subdirectory(surface_function)
add_subdirectory(input)
add_subdirectory(numerical_quadrature)
add_subdirectory(gepol)
add_subdirectory(dielectric_profile)
add_subdirectory(green)
add_subdirectory(bi_operators)
add_subdirectory(cpcm)
add_subdirectory(iefpcm)

get_property(test_sources GLOBAL PROPERTY UnitTestsSources)

link_directories(${PROJECT_BINARY_DIR}/lib)
add_executable(unit_tests unit_tests.cpp ${test_sources})
if(BUILD_CUSTOM_BOOST)
  add_dependencies(unit_tests custom_boost)
endif()
if(STATIC_LIBRARY_ONLY)
  add_dependencies(unit_tests pcm-static)
  target_link_libraries(unit_tests pcm getkw ${ZLIB_LIBRARIES})
else()
  add_dependencies(unit_tests pcm-shared)
  target_link_libraries(unit_tests pcm)
endif()
target_link_libraries(unit_tests ${CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES})

add_subdirectory(C_host)
if(ENABLE_FORTRAN_API)
  add_subdirectory(Fortran_host)
endif()
